<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".presentation.activity.search.SearchSangMusicActivity"
    tools:showIn="@layout/activity_search_sang_music">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/artistSangEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_artist_name"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/searchArtistSangButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textInputLayout"
        android:layout_centerInParent="true"
        android:background="@drawable/button"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingLeft="@dimen/search_button_margin"
        android:paddingRight="@dimen/search_button_margin"
        android:text="@string/text_search"
        android:textColor="@color/colorWhite" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/musicSangEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_music_name"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/searchMusicSangButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textInputLayout"
        android:layout_centerInParent="true"
        android:background="@drawable/button"
        android:paddingLeft="@dimen/search_button_margin"
        android:paddingRight="@dimen/search_button_margin"
        android:text="@string/text_search"
        android:textColor="@color/colorWhite" />

    <!--view表示時にeditTextからフォーカスを外すため-->
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <requestFocus />
    </TextView>

</LinearLayout>
